# PrimerCode

./: .gitignore  Cargo.toml  Dockerfile.backend  Dockerfile.frontend  Dockerfile.nginx  ReadMe.md  build.rs  createquestion.py  database.db  diesel.toml  docker-compose.yml  ideas.md  move.py  order_db.py  renew-certs.sh  test.py
client/: .env.prod  index.html  package-lock.json  package.json  vite.config.ts
client/public/: aboutpage.md
client/src/: App.css  App.tsx  main.tsx
injections/: func_output.py  function.py  function_top.py  imports.py  standard.py
migrations/2025-05-20-194717_questions-refactor/: down.sql  up.sql
migrations/2025-05-21-085955_unique-slug/: down.sql  up.sql
migrations/2025-05-30-133637_add_test_strategy_to_questions/: down.sql  up.sql
migrations/2025-06-08-080428_create_rank_and_category/: down.sql  up.sql
migrations/2025-06-22-090056_create_users/: down.sql  up.sql
migrations/2025-06-22-092435_fix_user_id_not_null/: down.sql  up.sql
migrations/2025-07-29-192430_create_tags/: down.sql  up.sql
nginx/: nginx.conf
questions/: q1.json
questions/AAAAAAAAA/: boilerplate.json  cases.py  hint.md  question.md  solution.md
questions/Add Nums/: cases.py  hint.md  question.md
questions/Alchemist's Volatile Brew/: boilerplate.json  cases.py  hint.md  question.md  solution.md
questions/Average Decline/: boilerplate.json  cases.py  hint.md  question.md  solution.md
questions/Birdwatching/: boilerplate.json  cases.py  hint.md  question.md  solution.md
src/: auth.rs  db.rs  main.rs  models.rs  schema.rs  types.rs
(+266 files in other folders)
