[package]
name = "wilderness"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
axum = { version = "0.8.4", features = ["http1"] }
tokio = { version = "1.45.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
ts-rs = "10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["json"] }