[package]
name = "wilderness"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
axum = { version = "0.8.4", features = ["http1"] }
tokio = { version = "1.45.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
ts-rs = "10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["json"] }
diesel = { version = "2.2.0", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "r2d2",
] }
dotenvy = "0.15"

anyhow = "1"
async-session = { version = "3.0" }
async-redis-session = "0.2.2"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
http = "1.0.0"
oauth2 = "4.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
percent-encoding = "2.1"
redis = { version = "0.24", features = ["aio", "tokio-comp"] }
